--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#fdd020</color>
+    <color name="blue_200">#1a2332</color>
+    <color name="blue_500">#161c2a</color>
 </resources>
